Document expectations for Static Analysis customer support

--- a/development/sec/secure/static-analysis/index.html.md.erb
+++ b/development/sec/secure/static-analysis/index.html.md.erb
@@ -334,6 +334,20 @@ We do, however, own and contribute to projects beyond the analyzers shipped as p
 the attention of an engineer in Static Analysis will be routed according to that project's `CODEOWNERS` file. Otherwise, unplanned work will be
 considered and handled on a case-by-base basis.
 
+#### Support to customers and prospects
+
+While we plan our work on a monthly basis, customers and customer-facing team members may need support on an unplanned basis.
+We aim to support these requests quickly because they affect the success of our customers and our business.
+
+Generally, we aim to provide an initial response and triage the question/report as quickly as is reasonable.
+"Reasonable" means, for example, that team members are answering during their normal working hours and are continuing their normal work activities.
+Whoever is available and can contribute to a solution is encouraged to make first contact with the questioner and ask any clarifying questions—remember, you can always tag in another group member later if you're unable to resolve the question.
+
+The aim of the triage is to support other team members in moving forward; if development work is required to address the problem, it is not automatically a top priority for the group and should not automatically displace existing planned work.
+If there is any question of whether a bug fix or improvement should be taken up immediately, the Engineering Manager and Product Manager should be alerted to facilitate a decision.
+
+When a [Customer Success Escalation](/handbook/customer-success/csm/escalations/) is declared, the Engineering Manager and Product Manager should both be alerted, and an appropriate team member should be designated to deprioritize existing work and respond to the escalation as soon as possible.
+
 ### Product Prioritization Labels
 
 We also use additional labels to categorize different types of requests. These labels represent the top areas of product impact we are currently focused on within the Static Analysis team.
