Add Eng All-Hands

--- a/cto-staff/index.html.md.erb
+++ b/cto-staff/index.html.md.erb
@@ -9,17 +9,13 @@ title: CTO Staff
 - TOC
 {:toc .hidden-md .hidden-lg}
 
-## Engineering Staff Meeting
+## Engineering All-Hands
 
-The Engineering Staff meeting happens weekly on alternating time slots: one that is afternoon / early evening in EMEA and morning in AMER, and another that is afternoon in AMER and morning in APAC.
+The Engineering All-Hands meeting happens monthly on alternating time slots in place of a [CTO Office Hours](../#communication).
 
-Anyone at GitLab is welcome to attend and contribute to the agenda. The agenda is internal only, please search in Google Drive for 'Engineering Staff Meeting'. Typical attendees are
+The purpose is to share company updates, stay connected, and receive feedback.
 
-1. The CTO.
-2. The CTO's direct reports.
-3. The [Acting Chief of Staff to the CTO](#acting-chief-of-staff-to-the-cto-rotation).
-4. [People Business Partners](/handbook/people-group/#people-business-partner-alignment-to-division) for Engineering.
-5. The EBA to the CTO.
+The entire Engineering group is invited, though anyone at GitLab is welcome to attend and contribute to [the All-Hands agenda](https://docs.google.com/document/d/1rxU8btp15LyI4BYcW2SzjorJVxcWmK2yPYgxDcHhq38/edit#) (internal). As with all general meetings at GitLab, attendance is optional though encouraged, and will be recorded.
 
 ## Engineering Offsite
 
