--- a/development/ops/monitor/observability/index.html.md.erb
+++ b/development/ops/monitor/observability/index.html.md.erb
@@ -91,17 +91,28 @@ We also encourage you to read our [architecture documentation](https://gitlab.co
 
 Observability and analytics features have big data and insert heavy requirements which are not a good fit for Postgres or Redis.  [ClickHouse](https://github.com/ClickHouse/ClickHouse) was selected as a good fit to meet these features requirements.  ClickHouse is an open-source column-oriented database management system. It is attractive for these use cases because it can efficiently filter, aggregate, and sum across large numbers of rows. ClickHouse is not intended to replace Postgres or Redis in GitLab's stack.
 
-ClickHouse is the backend datastore for these features (currently under development): 
-* Tracing
-* Error Tracking
-* Logging  
+ClickHouse is the backend datastore for these features:
+* [Tracing](https://gitlab.com/gitlab-org/opstrace/opstrace/-/blob/main/docs/architecture/tracing.md)
+* [Error Tracking](https://gitlab.com/gitlab-org/opstrace/opstrace/-/blob/main/docs/architecture/error-tracking.md)
 
-ClickHouse is also being considered as a backend for:
-* Metrics 
-* Product Analytics
-* Value Stream Analytics
-* User Ping
-* Vulnerability Reports
+ClickHouse is planned as the data backend for:
+* [Metrics](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/103747) 
+
+#### How are we currently using ClickHouse?
+
+* Our Integrated Error Tracking feature stores all errors in a [ClickHouse database deployed on GKE](https://gitlab.com/gitlab-org/opstrace/opstrace/-/blob/main/docs/architecture/error-tracking.md). This feature is in Open Beta.
+* Our [Tracing feature store traces in the same ClickHouse database](https://gitlab.com/gitlab-org/opstrace/opstrace/-/blob/main/docs/architecture/tracing.md). We maintain a [fork of the jaeger-clickhouse plugin](https://gitlab.com/gitlab-org/opstrace/jaeger-clickhouse) to achieve this. This feature is being dogfooded internally.
+* ClickHouse will be the core data storage solution for [our new Metrics feature](https://gitlab.com/gitlab-org/opstrace/opstrace/-/issues/1771). Once the [architectural blueprint](https://gitlab.com/gitlab-org/gitlab/-/merge_requests/103747) is approved, we will begin working on this feature in the subsequent milestones.
+* We also developed our [own ClickHouse Operator](https://gitlab.com/gitlab-org/opstrace/opstrace/-/tree/main/clickhouse-operator#clickhouse-operator).
+
+#### Current Challenges with ClickHouse
+
+* For our use cases we need to leverage the [S3 backed Disk](https://clickhouse.com/docs/en/guides/sre/configuring-s3-for-clickhouse-use) for high scalability. Long term we have identified this as a must. Storage in S3 is currently only available on AWS. Though it was scheduled to be available within GCP several months ago by ClickHouse Inc, the timelines have now changed significantly which requires us to migrate to AWS. 
+* ClickHouse requires a large amount of memory to run. The recommendation is a minimum of 16-32Gb for a small development instance and 64Gb-128Gb for a production instance. This leads to interesting questions about our goal for a self-hosted Observability solution. 
+  * https://clickhouse.com/docs/en/operations/tips/#ram
+  * https://kb.altinity.com/altinity-kb-setup-and-maintenance/cluster-production-configuration-guide/hardware-requirements/#clickhouse
+* ClickHouse requires a highly efficient, scalable and robust ingestion process, to handle high volumes of inserts, as a result we are [proposing to refactor our ingestion process](https://gitlab.com/gitlab-org/opstrace/opstrace/-/issues/1878) which may add complexity to the system.
+
 
 #### ClickHouse Acceleration Borrow Request
 
