Fix(Fulfillment): Conform to single teams + fix counterparts

--- a/development/fulfillment/fulfillment-platform/index.html.md.erb
+++ b/development/fulfillment/fulfillment-platform/index.html.md.erb
@@ -24,7 +24,7 @@ The Platform group manages the [Platform category](/handbook/product/product-cat
 
 ## Stable counterparts
 
-<%= stable_counterparts(role_regexp: /[,&] Fulfillment/, direct_manager_role: 'Fullstack Engineering Manager, Fulfillment:Fulfillment Platform') %>
+<%= stable_counterparts(role_regexp: /[,&] Fulfillment((?!:)|:Fulfillment Platform)/, direct_manager_role: 'Fullstack Engineering Manager, Fulfillment:Fulfillment Platform') %>
 
 #### Historical capacity
 
