--- a/development/fulfillment/provision/index.html.md.erb
+++ b/development/fulfillment/provision/index.html.md.erb
@@ -18,11 +18,11 @@ The Provision group manages the [Provision category](/handbook/product/product-c
 
 ## Team members
 
-<%= direct_team(role_regexp: /[,&] Fulfillment:Provision/, manager_role: 'Fullstack Engineering Manager, Fulfillment:Provision') %>
+<%= department_team(base_department: "Fulfillment:Provision Team") %>
 
 ## Stable counterparts
 
-<%= stable_counterparts(role_regexp: /[,&] Fulfillment/, direct_manager_role: 'Fullstack Engineering Manager, Fulfillment:Provision') %>
+<%= stable_counterparts(role_regexp: /[,&] Fulfillment((?!:)|:Provision)/, direct_manager_role: 'Fullstack Engineering Manager, Fulfillment:Provision') %>
 
 #### Historical capacity
 
