--- a/development/fulfillment/purchase/index.html.md.erb
+++ b/development/fulfillment/purchase/index.html.md.erb
@@ -1,7 +1,7 @@
 ---
 layout: handbook-page-toc
-title: Fulfillment Purchase Backend Team
-description: "The Purchase Backend Team of the Fulfillment Sub-department at GitLab"
+title: Fulfillment Purchase Team
+description: The Purchase Team of the Fulfillment Sub-department at GitLab
 ---
 
 ## On this page
@@ -10,19 +10,22 @@ description: "The Purchase Backend Team of the Fulfillment Sub-department at Git
 - TOC
 {:toc .hidden-md .hidden-lg}
 
-## Vision
+## Mission
 
 For more details about the product vision for Fulfillment, see our [Fulfillment](/direction/fulfillment/) page.
 
 The Purchase group manages the [Purchase category](/handbook/product/categories/#purchase-group).
 
+
 ## Team members
 
-<%= direct_team(manager_role: 'Backend Engineering Manager, Fulfillment:Purchase', role_regexp: /[,&] Fulfillment/) %>
+<%= direct_team(role_regexp: /[,&] Fulfillment:Purchase/, manager_role: 'Fullstack Engineering Manager (Interim), Fulfillment:Purchase') %>
 
-## Stable counterparts
+## Stable Counterparts
 
-<%= stable_counterparts(role_regexp: /[,&] Fulfillment/, direct_manager_role: 'Backend Engineering Manager, Fulfillment:Purchase') %>
+The following members of other functional teams are our stable counterparts:
+
+<%= stable_counterparts(role_regexp: /[,&] Fulfillment((?!:)|:Purchase)/, direct_manager_role: 'Fullstack Engineering Manager (Interim), Fulfillment:Purchase') %>
 
 ## How we work
 
