--- a/development/fulfillment/utilization/index.html.md.erb
+++ b/development/fulfillment/utilization/index.html.md.erb
@@ -26,7 +26,7 @@ The Utilization group manages the [Utilization category](/handbook/product/produ
 
 ## Stable counterparts
 
-<%= stable_counterparts(role_regexp: /[,&] Fulfillment/, direct_manager_role: 'Fullstack Engineering Manager, Fulfillment:Utilization') %>
+<%= stable_counterparts(role_regexp: /[,&] Fulfillment((?!:)|:Utilization)/, direct_manager_role: 'Fullstack Engineering Manager, Fulfillment:Utilization') %>
 
 ## How we work
 
