Update Integrations stable counterparts regex

--- a/development/dev/manage/integrations/index.html.md.erb
+++ b/development/dev/manage/integrations/index.html.md.erb
@@ -37,7 +37,7 @@ For more urgent items, feel free to use the Slack Channel (internal): [#g_manage
 
 ## Stable Counterparts
 
-<%= stable_counterparts(role_regexp: /(?!Integrations Engineer)(Integrations)/, direct_manager_role: 'Engineering Manager, Manage:Integrations') %>
+<%= stable_counterparts(role_regexp: /Manage:Integrations/, direct_manager_role: 'Engineering Manager, Manage:Integrations') %>
 
 ## OKRs
 
