Fix milestone planning links on product processes page

--- a/product/product-processes/index.html.md.erb
+++ b/product/product-processes/index.html.md.erb
@@ -169,7 +169,7 @@ the product is developed with [directly responsible individuals](/handbook/peopl
 
 | Product Managers | Engineering Managers | UXers | SETs |
 | :--------------: | :------------------: | :---: | :---: |
-| Set [milestone priorities](#planning-for-the-milestone) and define what features Engineering works on | Own the definition of done; decide what gets merged into Product. [Prioritizes maintenance work](#prioritization-for-feature-maintenance-and-bugs) | Proactively identify small and large strategic UX needs to aid Product Management prioritization | Own and identify test strategy and requirements to complete the definition of done |
+| Set [milestone priorities](/handbook/product/cross-functional-prioritization/#planning-for-the-milestone) and define what features Engineering works on | Own the definition of done; decide what gets merged into Product. [Prioritizes maintenance work](#prioritization-for-feature-maintenance-and-bugs) | Proactively identify small and large strategic UX needs to aid Product Management prioritization | Own and identify test strategy and requirements to complete the definition of done |
 
 #### Quad + Infra + Security Product Group DRIs
 
@@ -281,7 +281,7 @@ thought, or that something important is not getting due attention.
 1. Proper discovery has been done and requirements for the change are defined
 1. Engineering has been involved in the discovery and prioritization process (FE, BE, UX, Quality, and others as needed)
     1. You have worked with your Quad (EM, UX, QEM) to identify non-feature priorities by [work type](/handbook/engineering/metrics/#work-type-classification)
-    1. Features, maintenance, and bugs work are [properly balanced](#planning-for-the-milestone)
+    1. Features, maintenance, and bugs work are [properly balanced](/handbook/product/cross-functional-prioritization/#planning-for-the-milestone)
 1. Technical architecture has been drafted and is agreed upon
 1. Scoping and splitting up into actionable issues has happened
 1. Issues that move your plan forward have the appropriate [Product Direction label](/handbook/product/product-processes/#managing-your-product-direction) applied
@@ -895,7 +895,7 @@ Development Kit (GDK).
 
 Quality Engineering Managers (QEM) are the [DRIs for prioritizing bugs](#prioritization-for-feature-maintenance-and-bugs).  These include include security issues which are prioritized in conjunction with the security team. Product Managers must work with their QEM to set Milestones for issues marked with the `bug::vulnerability` [type label](/handbook/engineering/metrics/#work-type-classification) to guarantee they are shipped by their due date, as defined in the [Security Team process](/handbook/security/#severity-and-priority-labels-on-security-issues).
 
-While Product Managers are the DRIs for [milestone planning](#planning-for-the-milestone), they must respect the prioritization order for bugs and maintenance issues as determined by their QEM and EM, respectively. As such they should deeply understand the implications and risks of security-related issues and balance those when prioritizing a milestone work. Addressing a serious security issue by its due date may require temporarily adjusting the [desired work type ratio](#overview--philosophy) for one or more milestones. Priority labels and Due Date designations for security issues should never be modified by Product Managers as they are directly managed by the Security Team and used to track metrics and progress.
+While Product Managers are the DRIs for [milestone planning](/handbook/product/cross-functional-prioritization/#planning-for-the-milestone), they must respect the prioritization order for bugs and maintenance issues as determined by their QEM and EM, respectively. As such they should deeply understand the implications and risks of security-related issues and balance those when prioritizing a milestone work. Addressing a serious security issue by its due date may require temporarily adjusting the [desired work type ratio](#overview--philosophy) for one or more milestones. Priority labels and Due Date designations for security issues should never be modified by Product Managers as they are directly managed by the Security Team and used to track metrics and progress.
 
 ### Introducing application limits
 
@@ -1290,7 +1290,7 @@ As described above, prioritization is a multi-faceted problem. In order to
 translate the priorities of any given group into action by our engineering
 teams, we need to be able to translate this multi-faceted problem into a flat
 list of priorities for at least the next release cycle. Product Managers are
-[responsible for taking all these prioritization considerations](#planning-for-the-milestone) and creating a
+[responsible for taking all these prioritization considerations](/handbook/product/cross-functional-prioritization/#planning-for-the-milestone) and creating a
 clear, sequenced list of next priorities. This list should be represented as an [issue board](/stages-devops-lifecycle/issueboard/)
 so that each team has a clear interface for making decisions about work. From
 this list, UXers, Engineering Managers and Product Managers can work together to
@@ -1321,7 +1321,7 @@ responsible for velocity and delivery. However, there are instances when there i
 - Infrastructure projects with customer commitment or heavily upvoted should be given a priority indicative of other customer commitments
 - Vision or Direction items for a launch
 
-As the DRI for [milestone prioritization](#planning-for-the-milestone), it is the Product Manager's job to prioritize for predictability when it is needed. You should do so by ensuring you prioritize a deliverable, and its dependencies, so that it can reasonably be expected to be delivered by any committed dates. If there is time pressure to hit a date, the PM should also explore de-scoping the issue to meet the deadline, rather than pressuring engineering to move abnormally fast or cut corners.
+As the DRI for [milestone prioritization](/handbook/product/cross-functional-prioritization/#planning-for-the-milestone), it is the Product Manager's job to prioritize for predictability when it is needed. You should do so by ensuring you prioritize a deliverable, and its dependencies, so that it can reasonably be expected to be delivered by any committed dates. If there is time pressure to hit a date, the PM should also explore de-scoping the issue to meet the deadline, rather than pressuring engineering to move abnormally fast or cut corners.
 
 #### Private tools and dashboards for monitoring and KPI tracking
 
@@ -2519,7 +2519,7 @@ As part of our [planning](#planning-future-release) process it is important that
 It's customary to call these boards `STAGE - GROUP - Planning` and to configure them to filter
 to all issues with your group label and with each milestone as a column (here's [an example](https://gitlab.com/groups/gitlab-org/-/boards/1131777?&label_name%5B%5D=group%3A%3Ahealth)).
 
-As the [DRI](/handbook/people-group/directly-responsible-individuals/) for [milestone prioritization](n#planning-for-the-milestone) it is your responsibility to ensure that all items on your Planning board are scheduled to a [milestone](#milestones) and are prioritized both
+As the [DRI](/handbook/people-group/directly-responsible-individuals/) for [milestone prioritization](n/handbook/product/cross-functional-prioritization/#planning-for-the-milestone) it is your responsibility to ensure that all items on your Planning board are scheduled to a [milestone](#milestones) and are prioritized both
 within and across milestones. This means the lowest priority in the current milestone would generally be the top priority in the next milestone.
 
 In this regard your planning exercise is a complete prioritization of the near term issues.
