Update to Systems Admin Job Family

--- a/job-families/sales/business-systems-administrator/index.html.md.erb
+++ b/job-families/sales/business-systems-administrator/index.html.md.erb
@@ -36,8 +36,8 @@ They work with a combined team of Business Systems Engineers, Data Analysts, and
 * Gather business requirements for improvement projects and synthizie them into technical specifications for Business Systems Engineers to build.
 
 ### Performance Indicators 
-* [IACV vs. plan > 1](/handbook/sales/sales-term-glossary/arr-in-practice/#incremental-annual-contract-value-iacv)
-* [IACV efficiency > 1.0](/handbook/sales/#iavc-efficiency-ratio)
+* [Net ARR vs. plan > 1](/handbook/sales/sales-term-glossary/arr-in-practice/#incremental-annual-contract-value-iacv)
+* [Net ARR efficiency > 1.0](/handbook/sales/#iavc-efficiency-ratio)
 * [System Roll Out vs Plan](/handbook/business-technology/metrics/#system-roll-out-vs-plan)
 
 <%= partial("job-families/sales/performance", :locals => { :roleName => "Business Systems Administrator" }) %>
@@ -81,8 +81,8 @@ The Junior Business Systems Administrator is a [grade 5](/handbook/total-rewards
 * Gather business requirements for improvement projects and synthizie them into technical specifications for Business Systems Engineers to build.
 
 ### Performance Indicators 
-* [IACV vs. plan > 1](/handbook/sales/sales-term-glossary/arr-in-practice/#incremental-annual-contract-value-iacv)
-* [IACV efficiency > 1.0](/handbook/sales/#iavc-efficiency-ratio)
+* [Net ARR vs. plan > 1](/handbook/sales/sales-term-glossary/arr-in-practice/#incremental-annual-contract-value-iacv)
+* [Net ARR efficiency > 1.0](/handbook/sales/#iavc-efficiency-ratio)
 * [System Roll Out vs Plan](/handbook/business-technology/metrics/#system-roll-out-vs-plan)
 
 ### Intermediate Business Systems Administrator
@@ -119,8 +119,8 @@ The Business Systems Administrator is a [grade 6](/handbook/total-rewards/compen
 * Gather business requirements for improvement projects and synthizie them into technical specifications for Business Systems Engineers to build.
 
 ### Performance Indicators 
-* [IACV vs. plan > 1](/handbook/sales/sales-term-glossary/arr-in-practice/#incremental-annual-contract-value-iacv)
-* [IACV efficiency > 1.0](/handbook/sales/#iavc-efficiency-ratio)
+* [Net ARR vs. plan > 1](/handbook/sales/sales-term-glossary/arr-in-practice/#incremental-annual-contract-value-iacv)
+* [Net ARR efficiency > 1.0](/handbook/sales/#iavc-efficiency-ratio)
 * [System Roll Out vs Plan](/handbook/business-technology/metrics/#system-roll-out-vs-plan)
 
 ### Senior Business Systems Administrator
@@ -154,8 +154,8 @@ The Senior Business Systems Administrator is a [grade 7](/handbook/total-rewards
 * Gather business requirements for improvement projects and synthizie them into technical specifications for Business Systems Engineers to build.
 
 ### Performance Indicators 
-* [IACV vs. plan > 1](/handbook/sales/sales-term-glossary/arr-in-practice/#incremental-annual-contract-value-iacv)
-* [IACV efficiency > 1.0](/handbook/sales/#iavc-efficiency-ratio)
+* [Net ARR vs. plan > 1](/handbook/sales/sales-term-glossary/arr-in-practice/#incremental-annual-contract-value-iacv)
+* [Net ARR efficiency > 1.0](/handbook/sales/#iavc-efficiency-ratio)
 * [System Roll Out vs Plan](/handbook/business-technology/metrics/#system-roll-out-vs-plan)
 
 ### Staff Business Systems Administrator
@@ -186,8 +186,44 @@ The Staff Business Systems Administrator is a [grade 8](/handbook/total-rewards/
 * Expert knowledge on the use of Salesforce.com objects such as Accounts, Contacts, Leads, Opportunities, Quotes, and Campaigns.
 
 ### Performance Indicators 
-* [IACV vs. plan > 1](/handbook/sales/sales-term-glossary/arr-in-practice/#incremental-annual-contract-value-iacv)
-* [IACV efficiency > 1.0](/handbook/sales/#iavc-efficiency-ratio)
+* [Net ARR vs. plan > 1](/handbook/sales/sales-term-glossary/arr-in-practice/#incremental-annual-contract-value-iacv)
+* [Net ARR efficiency > 1.0](/handbook/sales/#iavc-efficiency-ratio)
+* [System Roll Out vs Plan](/handbook/business-technology/metrics/#system-roll-out-vs-plan)
+
+## Manager, Sales Systems
+
+### Responsibilities
+* Chief administrator of all sales systems.
+* Manage the day to day upkeep of Salesforce including system administration, support, implementation of data governance and partnering with IT to ensure compliance with user security standards and policies.
+* Handle all Sales Systems issue intake, maintain issue priority inside miletones and guide release management to close milestones. 
+* Play the role of sales systems spokesperson and run prioritization meetings, working and engaging with stakeholders, demonstrated by interpersonal excellence with all levels of seniority  from middle management to board level.
+* Delegate issues  to admins & engineering team / members, tackle the issue directly and building processes in Salesforce as needed.
+* Run the Sales Systems's agile development process, demonstrate ability to be a scrum master of scrum masters.
+* Be an advocate for Sales Systems work and release, collaborate with field communications on value delivered.
+* Build, lead, manage a team of Business Systems professionals and hold regular [1:1's](/handbook/leadership/1-1/) with all members of their team.
+* Help drive business system strategy and direction across Sales, Marketing, Quote to Cash as a cross-functional team.
+* Lead foundational projects and optimize current business processes (e.g. CPQ/QTC) in parternship with operations teams to scale for growth and efficiency.
+* Facilitate successful implementation of new technology and processes, fostering an organization of continuous business process improvement.
+* Partner with business users to lead the implementation of strategic projects critical to scaling the Go-To-Market process.
+
+### Requirements
+* BA/BS degree.
+* Past experience in a business and/or systems role.
+* Salesforce.com expert including validation rules, workflow, formulas, sandbox and customization of all standard and custom objects.
+* Demonstrated ability to drive cross-functional teams to meet business objectives and influence colleagues, fostering strong working relationships.
+* Strong strategic thinking, creative problem solving and analytical skills.
+* Excellent problem solving, project management, interpersonal and organizational skills.
+* Certified Salesforce.com Administrator and/or Force.com Developer.
+* SaaS and B2B experience preferred.
+* Interest in GitLab, and open source software.
+* You share our values, and work in accordance with those values.
+* Ability to thrive in a fully remote organization.
+* Leadership at GitLab.
+* Ability to use GitLab.
+
+### Performance Indicators 
+* [Net ARR vs. plan > 1](/handbook/sales/sales-term-glossary/arr-in-practice/#incremental-annual-contract-value-iacv)
+* [Net ARR efficiency > 1.0](/handbook/sales/#iavc-efficiency-ratio)
 * [System Roll Out vs Plan](/handbook/business-technology/metrics/#system-roll-out-vs-plan)
 
 ## Career Ladder
