Adding link for Respond Group JTBD

--- a/development/ops/index.html.md.erb
+++ b/development/ops/index.html.md.erb
@@ -32,7 +32,7 @@ The following teams comprise the sub-department:
 - Configure stage
     - Configure - [handbook](/handbook/engineering/development/ops/configure/), jtbd
 - Monitor stage - [handbook](/handbook/engineering/development/ops/monitor/)
-    - Monitor:Respond - [handbook](/handbook/engineering/development/ops/monitor/respond/), jtbd
+    - Monitor:Respond - [handbook](/handbook/engineering/development/ops/monitor/respond/), [jtbd](https://about.gitlab.com/handbook/engineering/development/ops/monitor/respond/jtbd/)
     - Monitor:Observability - [handbook](/handbook/engineering/development/ops/monitor/observability/), jtbd
 
 ## Product Direction
