Changing Monitor Stage to Respond Group

--- a/development/ops/monitor/respond/jtbd/index.html.md.erb
+++ b/development/ops/monitor/respond/jtbd/index.html.md.erb
@@ -1,7 +1,7 @@
 ---
 layout: handbook-page-toc
-title: Monitor Section - JTBD
-description: "The jobs-to-be-done that the Monitor group is solving for."
+title: Respond Group - JTBD
+description: "The jobs-to-be-done that the Respond group is solving for."
 ---
 
 ## On this page
@@ -11,7 +11,7 @@ description: "The jobs-to-be-done that the Monitor group is solving for."
 {:toc .hidden-md .hidden-lg}
 
 ## Overview
-The goal of this page is to create, share and iterate on the Jobs to be Done (JTBD) and their corresponding job statements for the Monitor stage. Our goal is to utilize the JTBD framework to better understand our buyers' and users' needs.
+The goal of this page is to create, share and iterate on the Jobs to be Done (JTBD) and their corresponding job statements for the Respond group. Our goal is to utilize the JTBD framework to better understand our buyers' and users' needs.
 
 ## Goals
 Utilize JTBD and job statements to:
